@@ -1,0 +1,46 @@
+#   Copyright (C) 2014 Free Software Foundation
+#
+# This file is part of the GNU Binutils.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
+# MA 02110-1301, USA.
+#
+
+#
+# ARC specific tests.
+#
+
+if {![istarget arc-*-*]} {
+    return
+}
+
+# Create an empty shared library that can be linked into some of these
+# tests.
+run_ld_link_tests [list \
+    [list \
+         "Build ARC700 (EA) dummy shared library" \
+         "-shared" \
+         "-mARC700 -mEA" \
+         { dummy-lib.s } \
+         {} \
+         "libdummy.so.0" \
+    ] \
+]
+
+set arc_test_list [lsort [glob -nocomplain $srcdir/$subdir/*.d]]
+foreach arc_test $arc_test_list {
+    verbose [file rootname $arc_test]
+    run_dump_test [file rootname $arc_test]
+}
