@@ -1,0 +1,6 @@
+        .section .text
+        .global libfunction
+libfunction:
+        nop
+        .type   libfunction, @function
+        .size   libfunction, .-libfunction
