@@ -1,3 +1,13 @@
+2014-09-12  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* ld/testsuite/ld-arc/arc.exp: New file.
+	* ld/testsuite/ld-arc/dummy-lib.s: New file.
+	* ld/testsuite/ld-arc/gotpc1.d: New file.
+	* ld/testsuite/ld-arc/gotpc1.ld: New file.
+	* ld/testsuite/ld-arc/gotpc1.s: New file.
+	* ld/testsuite/ld-arc/gotpc2.d: New file.
+	* ld/testsuite/ld-arc/gotpc2.ld: New file.
+
 2013-03-05  Alan Modra  <amodra@gmail.com>
 
 	* ld-scripts/rgn-at6.s, * ld-scripts/rgn-at6.t, * ld-scripts/rgn-at6.d,
